--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+passlib==1.7.4
 pkg-resources==0.0.0
 psycopg2==2.8.6
 requests==2.25.0
